exports[`test renders loading 1`] = `
<div>
<Connect(SplitContainerWithoutData)>
<Right mobile={false} classes={{...}} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double text-center">
<Loading />
</div>
</Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
<Connect(SplitContainerWithoutData)>
<Right mobile={false} classes={{...}}>
<ControllableWrapper autoCenter={true} markers={{...}} />
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Layout isLeader={1} group={{...}} leaders={{...}} join={[Function]} />
</Left>
</div>
`;

exports[`test renders without map on mobile 1`] = `
<div>
<Connect(SplitContainerWithoutData)>
<Right mobile={false} classes={{...}} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Layout isLeader={1} group={{...}} leaders={{...}} join={[Function]} />
</Left>
</div>
`;

exports[`test renders without map on server 1`] = `
<div>
<Connect(SplitContainerWithoutData)>
<Right mobile={false} classes={{...}} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Layout isLeader={1} group={{...}} leaders={{...}} join={[Function]} />
</Left>
</div>
`;
